--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@types/bootstrap": "^4.3.1",
     "@types/jquery": "^3.3.31",
+    "tsc": "^1.20150623.0",
     "typescript": "^3.6.3"
   }
 }
